# moxui

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  FUTURE_ROADMAP.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROPOSAL.md  README.md  ROADMAP.md  config.example.yaml  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
benches/: auth_benchmarks.rs
contrib/: moxui.service  moxui.yaml.example
deploy/k8s/moxui/: .helmignore  Chart.yaml  values.yaml
deploy/k8s/moxui/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/terraform/: README.md  main.tf  outputs.tf  variables.tf
deploy/terraform/examples/basic/: README.md  main.tf
deploy/terraform/provider/: go.mod  main.go  provider.go
deploy/terraform/provider/docs/: index.md
deploy/terraform/provider/resources/: resource_vm.go  resource_vm_test.go
docs/: ARCHITECTURE.md  DATA_MODEL.md  FEATURE_SCOPE.md  INSTALL.md  TEAM.md  authentication.md  configuration.md  deployment.md  development.md  installation.md  proxmox-api-coverage.md
docs/diagrams/: data-flow.md  request-flows.md  security-boundaries.md  state-machines.md
scripts/: README.md  backup.sh  restore.sh  s3-backup.sh  sign-release.sh
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs  tls.rs
src/api/: audit.rs  auth.rs  ceph.rs  cluster.rs  dashboard.rs  firewall.rs  hagroups.rs  health.rs  lxcs.rs  mod.rs  networks.rs  replication.rs  sdn.rs  storages.rs  tasks.rs  vms.rs  vnc.rs  webauthn.rs
src/audit/: middleware.rs  mod.rs  store.rs
src/auth/: jwt.rs  ldap.rs  middleware.rs  mod.rs  oidc.rs  password.rs  refresh.rs  totp.rs  user.rs  vnc.rs  webauthn.rs
src/cache/: mod.rs
src/dashboard_custom/: mod.rs
src/db/: mod.rs
src/observability/: metrics.rs  mod.rs  tracing.rs
src/plugin/: audit_logger.rs  mod.rs  webhook_bridge.rs
src/proxmox/: auth.rs  circuit_breaker.rs  client.rs  mod.rs  retry.rs  types.rs
src/security/: api_key.rs  mod.rs  rate_limiter.rs
src/ui/: mod.rs
src/webhook/: dispatcher.rs  mod.rs
tests/fixtures/: README.md  test_jwt_priv.pem  test_jwt_pub.pem  test_tls_cert.pem  test_tls_key.pem
tests/k6/: README.md  load_test.js  smoke_test.js  stress_test.js
ui/: index.html  manifest.json  sw.js
ui/locales/: en.json  th.json
ui/static/: app.css  app.js
