[package]
name = "moxui"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["kungjom26"]
description = "Modern, secure Rust-based web UI for Proxmox VE"
homepage = "https://github.com/kungjom26/moxui"
repository = "https://github.com/kungjom26/moxui"
readme = "README.md"
keywords = ["proxmox", "hypervisor", "kvm", "ui", "rust"]
categories = ["api-bindings", "virtualization", "web-programming"]

[lib]
name = "moxui"
path = "src/lib.rs"

[[bin]]
name = "moxui"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "set-header"] }

# HTTP client (Proxmox)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Secret management (security: protect credentials in memory)
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# TLS / Crypto (rustls is required for rustls-pki-types via reqwest/rustls)
# Note: rustls-pemfile (unmaintained per RUSTSEC-2025-0134) deliberately omitted —
# when needed, use rustls-pki-types (1.9+) which has the same PEM parsing built in.
rustls = { version = "0.23", features = ["aws_lc_rs"] }
webpki-roots = "0.26"
chacha20poly1305 = "0.10"

# Cache
moka = { version = "0.12", features = ["future"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.14"

# Config
figment = { version = "0.10", features = ["env", "toml", "yaml"] }

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Embedded UI
rust-embed = "8"
mime_guess = "2"

# WebSocket + VNC proxy
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Rate limiting
tower_governor = "0.8"
axum-server = { version = "0.7.2", default-features = false, features = ["tls-rustls"] }
tokio-rustls = "0.26.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
fake = { version = "2", features = ["derive"] }
proptest = "1"
serde_json = "1"
tower = { version = "0.4", features = ["util"] }

[[bench]]
name = "auth_benchmarks"
harness = false

# Lint configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# `doc_markdown` is too noisy for a project that has many literal
# identifiers in doc comments (e.g. `Bearer ***, RS256, Audience "aud-A"`).
# We keep `pedantic` for the other useful lints.
doc_markdown = "allow"
# `items_after_statements` is unhelpful when test helpers (`const ... =
# include_str!(...)`) need to come right after `use` statements.
items_after_statements = "allow"
# `result_large_err`: Response / String are natural error types for our
# auth / config helpers. Boxing them for clippy's benefit would obscure
# call sites without runtime payoff (errors propagate, never heap-allocated
# in hot paths).
result_large_err = "allow"

# Profile configuration
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Release with debug info — use for profiling or when crash reports need
# backtraces. Significantly larger binary than plain `release`.
[profile.release-debug]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.ci]
inherits = "dev"
incremental = false
